# kokoro-tts-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
examples/: demo.sh  texts.py
kokoro_tts_cli/: __init__.py  client.py  client_cli.py  server.py  streamer.py
